--- a/back/package.json
+++ b/back/package.json
@@ -33,6 +33,7 @@
     "@nestjs/platform-express": "^10.4.6",
     "@prisma/client": "^5.21.1",
     "bcryptjs": "^2.4.3",
+    "html-pdf": "^3.0.1",
     "openai": "^4.68.4",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
@@ -51,6 +52,7 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
+    "@types/pdf": "^0.0.31",
     "@types/supertest": "^6.0.0",
     "@vitest/coverage-v8": "^2.1.4",
     "dotenv": "^16.4.5",
