--- a/back/package.json
+++ b/back/package.json
@@ -33,6 +33,7 @@
     "@nestjs/platform-express": "^10.4.6",
     "@prisma/client": "^5.21.1",
     "bcryptjs": "^2.4.3",
+    "csv-parser": "^3.0.0",
     "html-pdf": "^3.0.1",
     "openai": "^4.68.4",
     "passport-jwt": "^4.0.1",
